syntax = "proto3";
package tableau;
option go_package = "github.com/tableauio/tableau/proto/tableaupb";

import "tableau.proto";

message WorkbookMeta {
  option (tableau.worksheet) = {
    name: "@TABLEAU"
    namerow: 1
    datarow: 2
  };

  map<string, SheetMeta> sheet_meta_map = 1 [(tableau.field).key = "Sheet"];
}
message SheetMeta {
  string sheet = 1 [(tableau.field) = { name: "Sheet" optional: false }];
  string alias = 2 [(tableau.field) = { name: "Alias" optional: true }];
  int32 nameline = 3 [(tableau.field) = { name: "Nameline" optional: true }];
  int32 typeline = 4 [(tableau.field) = { name: "Typeline" optional: true }];
  bool transpose = 5 [(tableau.field) = { name: "Transpose" optional: true }];
  bool nested = 6 [(tableau.field) = { name: "Nested" optional: true }]; // nested naming of namerow
  string sep = 7 [(tableau.field) = { name: "Sep" optional: true }];
  string subsep = 8 [(tableau.field) = { name: "Subsep" optional: true }];
  bool ordered_map = 9 [(tableau.field) = { name: "OrderedMap" optional: true }]; // generate ordered map accessers
}